<resources>
    <string name="app_name">Diet Hub</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_details">detailsActivity</string>
    <string name="title_activity_list_order">ListOrderActivity</string>

    <string name="todo">Home</string>
    <string name="my_profile">my_profile</string>

    <!--Title-->
    <string name="Login">Login</string>

    <string name="Hallo">Hallo !</string>

    <string name="LoginToUseApp">Login To Use App</string>

    <string name="PhoneNumber">Phone Number</string>
    <string name="Password">Password</string>

    <string name="ForgotPassword">Forgot Password ?</string>

    <string name="EnterButton">Enter</string>

    <string name="NotRegister">Not Register ? </string>

    <string name="RegisterNow"> Register Now </string>
    <string name="english">English</string>
    <string name="EnterPhoneToSendPassword">Enter the mobile number to send the password recovery code</string>
    <string name="SendCode">Send Code</string>
    <string name="enter_code_to_password">Enter the password recovery code sent to your mobile number</string>
    <string name="PasswordRecovery">Password Recovery</string>
    <string name="About_Us">About Us</string>
    <string name="Myaccount">My Account</string>
    <string name="Personal_info">Personal Information</string>
    <string name="Modify_password">Modify Password</string>
    <string name="MyAddresses">My Addresses</string>
    <string name="MyWallet">My Wallet</string>
    <string name="Ratings">Ratings</string>
    <string name="Payments">Payments</string>
    <string name="Number_Requests">Number of requests</string>
    <string name="Add_New_Address">Add New Address</string>
    <string name="Enter_NameOf_Location">Enter the Name Of Location</string>
    <string name="Enter_Address_here">Enter the Address here</string>
    <string name="Add">Add</string>
    <string name="Terms_Conditions">Terms and Conditions</string>
    <string name="Connect_W_U">Connect With Us</string>
    <string name="User_Name">User Name</string>
    <string name="Email">Email</string>
    <string name="Message">Message</string>
    <string name="Send">Send</string>
    <string name="ContactAddress">Contact Address</string>
    <string name="Details">Details</string>
    <string name="About_Res">About Restaurant</string>
    <string name="Communication">Communication</string>
    <string name="Time_Work">Times of work</string>
    <string name="Geographical_Location">Geographical Location</string>
    <string name="Res_Photo">Photo Of Restaurant</string>
    <string name="NumberOfOrder">Order"'"s Number :</string>
    <string name="OrderDetails">Order Details</string>
    <string name="Count">Count :</string>
    <string name="Total">Total :</string>
    <string name="Commission_Communication">Commission Communication :</string>
    <string name="Payment_Method">Payment Method :</string>
    <string name="Order_State">Order State :</string>
    <string name="Delivery_Address">Delivery Address</string>
    <string name="Delegate">Delegate :</string>
    <string name="Package_Content">Package Content</string>
    <string name="Timing_Delivery">Timing Delivery</string>
    <string name="PackagePrice">Package Price</string>
    <string name="Discount">Discount</string>
    <string name="Calories">Calories</string>
    <string name="Add_To_List">Add To List</string>
    <string name="Meal_Description">Meal Description</string>
    <string name="Anther_Adds">Anther Adds</string>
    <string name="Enter_Discount_Code">Enter the Discount Code</string>
    <string name="Enter_Code_Here">Enter the Code Here</string>
    <string name="Active">Active</string>
    <string name="Have_Code">Do you have a discount code ?</string>
    <string name="Favorite">Favorite</string>
    <string name="Restaurants">Restaurants</string>
    <string name="App_Lang">App Language</string>
    <string name="List_Shopping">List Shopping</string>
    <string name="Payment_Method_WithOut_Points">Payment method</string>
    <string name="Payment_Details">Payment Details</string>
    <string name="Total_Price">Total_Price</string>
    <string name="Executing_Request">Executing Request</string>
    <string name="Cancelling_Order">Cancelling Order</string>
    <string name="Packages">Packages</string>
    <string name="Modify_Address">Modify Address</string>
    <string name="Save">Save</string>
    <string name="Home_Address">Home Address</string>
    <string name="Old_Pass">Old Password</string>
    <string name="New_Pass">New Password</string>
    <string name="Confirm_New_Pass">Confirm the New Password</string>
    <string name="Sorry_Password_Not_Match">Sorry, the password does not match</string>
    <string name="Confirm_Pass">Confirm the Password</string>
    <string name="Confirm">Confirm</string>
    <string name="Notification">Notification</string>
    <string name="Nutritional_Counseling">Nutritional Counseling</string>
    <string name="Firstly">Firstly</string>
    <string name="Secondly">Secondly</string>
    <string name="Third">Third</string>
    <string name="Have_Inquiry">If you have any questions, please contact us via WhatsApp</string>
    <string name="My_Orders">My Orders</string>
    <string name="Being_Processed">Processed</string>
    <string name="Delivery_In_Progress">Delivery</string>
    <string name="Received">Received</string>
    <string name="MyPackages">MyPackages</string>
    <string name="Primary_PaymentMethod">Primary payment method</string>
    <string name="City">City</string>
    <string name="Modify_Personal_Info">Modify personal information</string>
    <string name="Create_New_Account">Create a new account</string>
    <string name="I_Agree_On">I Agree On</string>
    <string name="Create_Account">Create Account</string>
    <string name="Time_Allocation">Time Allocation</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="Monday">Monday</string>
    <string name="My_Wallet">My Wallet</string>
    <string name="Current_Balance">Current Balance</string>
    <string name="Last_Operations">Last Operations</string>
    <string name="Select_To_Complete_Browsing">Choose from the following to complete the application browsing easily and safely</string>
    <string name="Add_Timing">Add Timing</string>
    <string name="Add_Your_rating">Add Your Rating</string>
    <string name="Service_Evaluation">Service Evaluation</string>
    <string name="Order_Evaluation">Order Evaluation</string>
    <string name="Carb">Carb</string>
    <string name="Protein">Protein</string>
    <string name="Fats">Fats</string>
    <string name="Total_Calories">Total Calories</string>
    <string name="Cancel">Cancel</string>
    <string name="Select_City">Select City</string>
    <string name="Apply">Apply</string>
    <string name="Your_Current_Location">Your Current Location</string>
    <string name="See_Favorites">See Favorites</string>
    <string name="Duration_package">Duration package</string>
    <string name="weekly">weekly</string>
    <string name="Monthly">Monthly</string>
    <string name="Three_Months">3 Months</string>
    <string name="Six_Months">6 Months</string>
    <string name="Yearly">Yearly</string>
    <string name="Package_Request">Package Request</string>
    <string name="Home">home</string>
    <string name="My_Order">My orders</string>
    <string name="My_Favorite">My favorite</string>
    <string name="My_Pay">My Pay</string>
    <string name="My_Packages">My packages</string>
    <string name="My_Notifications">My Notifications</string>
    <string name="My_Consulting">My Consulting</string>
    <string name="My_Calories">My Calories</string>
    <string name="about_us">about us</string>
    <string name="privacy_policy"><![CDATA[privacy & policy]]></string>
    <string name="Contact_Us">Contact Us</string>
    <string name="Lang">language</string>
    <string name="SignOut">SignOut</string>
    <string name="Added_To_Favorites_Successfully">Added to favorites successfully</string>
    <string name="Add_Code">Add Code</string>
    <string name="Change">Change</string>
    <string name="Password_Retrieved_Successfully">Password retrieved successfully</string>
    <string name="Account_Created_Successfully">Your account has been created successfully</string>
    <string name="Modify_Successfully">Modify password successfully</string>
    <string name="Do_Cancel_Order">Do you want to cancel the request ?</string>
    <string name="Meals">Meals</string>
    <string name="Add_Address_Successfully">The address was added successfully</string>
    <string name="Add_Discount_Code_Successfully">Discount code added successfully</string>
    <string name="Type_Your_experience_Here">أكتب هنا تجربتك</string>
    <string name="Report">تم إرسال التبليغ عن التقييم</string>

</resources>
