<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_inActivity"
    android:background="@color/background"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/AppBer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Login"
                    android:layout_gravity="center"
                    style="@style/TitleStyle"
                    />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:src="@drawable/logostart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AppBer" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helvetica_bold"
            android:includeFontPadding="false"
            android:text="@string/Hallo"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_35sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView14" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helveticaneuelt_arabic"
            android:includeFontPadding="false"
            android:text="@string/LoginToUseApp"
            android:textColor="@color/text2"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView26" />

        <EditText
            android:id="@+id/PhoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/style_textinput"
            android:drawableStart="@drawable/phone"
            android:drawablePadding="@dimen/_7sdp"
            android:fontFamily="@font/helveticaneuelt_arabic"
            android:gravity="center"
            android:hint="@string/PhoneNumber"
            android:importantForAutofill="noExcludeDescendants"
            android:includeFontPadding="false"
            android:inputType="phone"
            android:paddingTop="@dimen/_10sdp"
            android:paddingLeft="@dimen/_20sdp"
            android:paddingRight="@dimen/_20sdp"
            android:paddingBottom="15dp"
            android:textSize="@dimen/_17sdp"
            app:layout_constraintTop_toBottomOf="@+id/textView29"
            app:layout_constraintWidth_percent=".9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/_15sdp"
            android:drawableLeft="@drawable/phone" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/padlock"
            android:drawablePadding="@dimen/_7sdp"
            android:fontFamily="@font/helveticaneuelt_arabic"
            android:gravity="center"
            android:hint="@string/Password"
            android:importantForAutofill="noExcludeDescendants"
            android:includeFontPadding="false"
            android:inputType="textPassword"
            android:paddingTop="@dimen/_10sdp"
            android:paddingLeft="@dimen/_20sdp"
            android:paddingRight="@dimen/_20sdp"
            android:paddingBottom="15dp"
            android:textSize="@dimen/_17sdp"
            app:layout_constraintTop_toBottomOf="@+id/PhoneNumber"
            android:background="@drawable/style_textinput"
            app:layout_constraintWidth_percent=".9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawableLeft="@drawable/padlock" />

        <TextView
            android:id="@+id/ForgottenPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:onClick="onClick"
            android:text="@string/ForgotPassword"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_17sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Password"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/helveticaneuelt_arabic"/>

        <Button
            android:id="@+id/EnterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/style_rating2"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_17sdp"
            app:layout_constraintTop_toBottomOf="@+id/ForgottenPassword"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:text="@string/EnterButton"
            android:textSize="@dimen/_17sdp"
            android:fontFamily="@font/helveticaneuelt_arabic"
            android:textColor="@color/white"
            android:onClick="onClick"
            />

        <LinearLayout
            android:id="@+id/LayoutOfEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EnterButton"
            app:layout_constraintVertical_bias=".9"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_10sdp">

            <TextView
                android:id="@+id/WithOutEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/newAccount"
                android:fontFamily="@font/helveticaneuelt_arabic"
                android:includeFontPadding="false"
                android:text="@string/NotRegister"
                android:textColor="#000"
                android:textSize="20dp"
                />

            <TextView
                android:id="@+id/newAccount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/helveticaneuelt_arabic"
                android:includeFontPadding="false"
                android:text="@string/RegisterNow"
                android:textColor="@color/colorPrimary"
                android:textSize="20dp"
                android:textStyle="bold"
                android:onClick="onClick"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>