<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Password_RecoveryActivity"
    android:background="@color/background">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".45" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".15" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".85" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logostart"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/helveticaneuelt_arabic"
        android:text="@string/EnterPhoneToSendPassword"
        android:textColor="#000"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintEnd_toEndOf="@+id/guideline8"
        app:layout_constraintStart_toEndOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/imageView14"
        android:gravity="center"
        android:includeFontPadding="false"
        android:layout_marginTop="@dimen/_10sdp"/>

    <EditText
        android:id="@+id/PhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/style_textinput"
        android:drawableEnd="@drawable/phone"
        android:drawablePadding="@dimen/_7sdp"
        android:fontFamily="@font/helveticaneuelt_arabic"
        android:gravity="right"
        android:hint="@string/PhoneNumber"
        android:importantForAutofill="noExcludeDescendants"
        android:includeFontPadding="false"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/_20sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingRight="@dimen/_20sdp"
        android:paddingBottom="15dp"
        android:textSize="@dimen/_17sdp"
        app:counterMaxLength="10"
        app:layout_constraintTop_toBottomOf="@+id/textView30"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:drawableRight="@drawable/phone" />


    <Button
        android:id="@+id/Send_Code_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/style_rating2"
        android:layout_centerInParent="true"
        android:fontFamily="@font/helveticaneuelt_arabic"
        android:includeFontPadding="false"
        android:text="@string/SendCode"
        android:textColor="@color/white"
        android:textSize="@dimen/_17sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_17sdp"
        app:layout_constraintTop_toBottomOf="@+id/PhoneNumber"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
